<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/flashOn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_outline"
            android:contentDescription="@string/flashOn"
            android:src="@drawable/ic_flash_on" />

        <ImageView
            android:id="@+id/flashOff"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_outline"
            android:contentDescription="@string/flashOff"
            android:src="@drawable/ic_flash_off" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/AdMob_Banner_Ads_ID" />

    </RelativeLayout>

</LinearLayout>